// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`synthetix feeds execute price endpoint sUSDe - USD success 1`] = `
{
  "data": {
    "result": "1.095954884891898451",
  },
  "result": "1.095954884891898451",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`synthetix feeds execute price endpoint wstETH - USD success 1`] = `
{
  "data": {
    "result": "3025.4794191307114558",
  },
  "result": "3025.4794191307114558",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
